# vexilla

./: MANIFEST.in  README.md  THIRD_PARTY.md  pyproject.toml
data/: kb.db
debian/: changelog  rules  vexilla.install  vexilla.postinst  vexilla.postrm  vexilla.service
docs/: architecture.md  collector-design.md  data-model.md  insight-engine.md  knowledge-base.md  mvp-scope.md  privacy.md  requirements.md  roadmap.md  tech-stack.md  ui-wireframes.md
docs/adr/: 0001-platform-linux-only.md  0002-observe-only.md  0003-precomputed-offline-kb.md  0004-lean-python-collector.md  0005-license-mit.md  0006-no-tls-interception.md
packaging/: PKGBUILD  build-deb.sh  build-rpm.sh  config.toml.example  install.sh  uninstall.sh  vexilla.service  vexilla.spec  vexilla_0.1.0-1_all.deb  vexilla_0.1.0-1_amd64.deb
packaging/debian/: control  copyright  vexilla.postinst  vexilla.service
packaging/vexilla-deb/DEBIAN/: control  postinst  postrm
packaging/vexilla-deb/usr/lib/systemd/system/: vexilla.service
packaging/vexilla-deb/usr/lib/vexilla/src/vexilla.egg-info/: PKG-INFO
packaging/vexilla-deb/usr/lib/vexilla/src/vexilla/api/: __init__.py
scripts/: dedup.py
src/vexilla/: __init__.py  config.py
src/vexilla.egg-info/: SOURCES.txt  entry_points.txt  requires.txt
src/vexilla/cli/: app.py
src/vexilla/collector/: __init__.py  classify.py  daemon.py  dns.py  ebpf.py  process.py  writer.py
src/vexilla/insight/: engine.py
src/vexilla/store/: database.py
src/vexilla/web/templates/: app_detail.html  consent.html  favicon.html  services.html  settings.html
tests/: test_classify.py  test_conntrack.py  test_dns.py  test_insight.py  test_procnet.py  test_store.py
(+16 files in other folders)
